# rp2040-hps

./: Cargo.toml
.cargo/: config
examples/: Session.vim  rx.rs  tx.rs
scripts/: flash-debugger.ps1  flash.ps1
src/: main.rs
