[package]
name = "rp2040-hps"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.7.3"
cortex-m-rt = "0.7.0"
embedded-hal = { version = "0.2.6", features = ["unproven"] }
embedded-time = "0.12.1"

defmt = "0.2.3"
defmt-rtt = "0.2.0"
panic-probe = { version = "0.2.1", features = ["print-defmt"] }
nb = "1.0.0"

rp2040-hal = { git = "https://github.com/rp-rs/rp-hal", branch="main", features=["rt"] }
rp2040-boot2 = { git = "https://github.com/rp-rs/rp2040-boot2-rs", branch="main" }

dw1000 = "0.5.0"

[features]
default = [
  "defmt-trace",
]
defmt-trace = []
